add nginx and docker-compose
