# app/docs/swagger.json
@@ -10,7 +10,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8000",
+    "host": "3117-176-52-104-232.ngrok.io/api",
     "basePath": "/",
     "paths": {
         "/user/entry": {
@@ -225,6 +225,46 @@
                 ],
                 "summary": "Refresh user token",
                 "operationId": "refresh",
+                "responses": {
+                    "200": {
+                        "description": "Success created",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/upgrade": {
+            "get": {
+                "description": "Upgrade user role",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Upgrade user role",
+                "operationId": "upgrade",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Success created",
